--- a/roles/homebrew/vars/main.yml
+++ b/roles/homebrew/vars/main.yml
@@ -2,6 +2,7 @@ homebrew_taps:
   - { name: homebrew/cask }
 
 homebrew_packages:
+  - { name: bat }
   - { name: mysql }
   - { name: fzf }
   - { name: emojify }
